# polygen

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  polygen.html  polygen.polygen2d.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy_docs.yml
_modules/: index.html
_modules/polygen/: main.html
_modules/polygen/polygen2d/: IO.html  constrainedPointGen.html  errorBasedLloyd.html  extractVoronoiEdges.html  finiteThicknessCohesiveZone.html  geometry.html  optimize.html  plotting.html  triangularMeshing.html  utils.html  voroGen.html
_static/: custom.js
docs/source/: conf.py  index.rst  modules.rst  polygen.polygen2d.rst  polygen.rst
examples/: input.in
polygen/: main.py
polygen/polygen2d/: IO.py  __init__.py  constrainedPointGen.py  errorBasedLloyd.py  extractVoronoiEdges.py  finiteThicknessCohesiveZone.py  geometry.py  optimize.py  plotting.py  triangularMeshing.py  utils.py  voroGen.py
voromesh/: main.py
voromesh/voromesh2d/: IO.py  __init__.py  adjust_VoronoiCells.py  constrainedPointGen.py  constrained_lloyd.py  errorBasedLloyd.py  extractVoronoiEdges.py  finiteThicknessCohesiveZone.py  geometry.py  main_ComputeVoronoi.py  optimize.py  plotting.py  savingData.py  triangularMeshing.py  utils.py  voroGen.py
