[tool.poetry]
name = "voromesh"
version = "1.1.0"
description = ""
authors = ["Rumi381 <jalaluddinrumi381@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
scipy = "^1.14.0"
shapely = "^2.0.5"
matplotlib = "^3.9.1"
trimesh = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
voromesh = "voromesh.main:main"