[tool.poetry]
name = "voromesh"
version = "1.2.0"
description = ""
authors = ["Rumi381 <jalaluddinrumi381@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
scipy = "^1.14.0"
shapely = "^2.0.5"
matplotlib = "^3.9.1"
meshio = "^5.3.5"
triangle = "^20250106"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^3.0.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
voromesh = "voromesh.main:main"